Start/End Scenes

--- a/Assets/GameConnection/GameConnection.asmdef
+++ b/Assets/GameConnection/GameConnection.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "GameConnection",
     "references": [
-        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
+        "NaughtyAttributes.Core",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
